Fix pagination wrapping for narrow screens

--- a/app/styles/app/modules/pagination.scss
+++ b/app/styles/app/modules/pagination.scss
@@ -5,14 +5,15 @@
   ul {
     display: flex;
     align-items: baseline;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     justify-content: center;
     padding: 0;
+    margin: 0.5em 0;
     list-style: none;
   }
 
   li {
-    margin: 0 0.5em;
+    margin: 0.5em;
   }
 }
 
